# weightconvert

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vite.config.js
.github/workflows/: deploy.yml
data/: aliases.json  eval.jsonl  finetune-eval.jsonl  hard-raw.jsonl  ingredients.json  training.jsonl  units.json
docs/: DEPLOY.md  FINETUNE.md  GEN_ALIASES.md  PROMPT.md  SCRAPING.md  TRAINING_DATA.md
finetune/: Dockerfile.mlc  convert_to_mlc.sh  prepare_data.py  train.py
scripts/: build-units.js  eval.js  eval_pipeline_b.py  gen-aliases.js  gen-training-hard.js  gen-training-programmatic.js  gen-training.js  scrape.js  test-haiku.js
src/: config.js  index.html  main.js  pipeline-a.js  style.css  worker-b.js
src/public/: CNAME
